fix(response): fix long word overflow by adding text-break

--- a/src/components/Response/index.style.css
+++ b/src/components/Response/index.style.css
@@ -25,3 +25,5 @@
     font-weight: bold;
     text-align: left;
 }
+
+.info {}
